# LeftoverPasta-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist.in  README.md
.github/workflows/: lp_multiplat.yml
scripts/: build.sh
src/: asset_utils.hpp  fiddle_context.hpp  fiddle_context_gl.cpp  fiddle_context_metal.mm  path_fiddle.cpp
